--- a/ProjektSemestrIV/Views/EditShootersView.xaml
+++ b/ProjektSemestrIV/Views/EditShootersView.xaml
@@ -40,16 +40,16 @@
 
             <Label Grid.Row="0" Grid.Column="0" Content="{Binding Source={x:Static resx:Resources.ShooterName}}"/>
             <TextBox
-                Grid.Row="0" Grid.Column="1"
+                Grid.Row="0" Grid.Column="1" Width="125"
                 x:Name="TextBoxShooterName" x:FieldModifier="private"
-                VerticalAlignment="Center"
+                VerticalAlignment="Center" HorizontalAlignment="Left"
                 Text="{Binding Name, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
 
             <Label Grid.Row="1" Grid.Column="0" Content="{Binding Source={x:Static resx:Resources.ShooterSurname}}"/>
             <TextBox
-                Grid.Row="1" Grid.Column="1" 
+                Grid.Row="1" Grid.Column="1" Width="125"
                 x:Name="TextBoxShooterSurname" x:FieldModifier="private"
-                VerticalAlignment="Center"
+                VerticalAlignment="Center" HorizontalAlignment="Left"
                 Text="{Binding Surname, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
 
             <Button
