--- a/ProjektSemestrIV/Views/EditCompetitionsView.xaml
+++ b/ProjektSemestrIV/Views/EditCompetitionsView.xaml
@@ -22,7 +22,7 @@
         </Grid.RowDefinitions>
 
         <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2"
-               Content="{Binding Source={x:Static resx:Resources.EditCompetition}}" FontSize="30"/>
+               Content="{Binding Source={x:Static resx:Resources.CompetitionEditing}}" FontSize="30"/>
 
         <Grid Grid.Row="1" Grid.Column="0" Margin="0,0,10,0">
             <Grid.ColumnDefinitions>
