--- a/ProjektSemestrIV/Views/EditScoreView.xaml
+++ b/ProjektSemestrIV/Views/EditScoreView.xaml
@@ -123,7 +123,7 @@
         <GridSplitter Grid.Row="1" Grid.Column="1" HorizontalAlignment="Stretch"/>
 
         <TabControl Grid.Row="1" Grid.Column="2">
-            <TabItem Header="Competitions and Stages">
+            <TabItem Header="{Binding Source={x:Static resx:Resources.CompetitionsAndStages}}">
                 <Grid Grid.Row="2" Grid.Column="0">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="auto"/>
@@ -164,7 +164,7 @@
                     </DataGrid>
                 </Grid>
             </TabItem>
-            <TabItem Header="Shooters and Targets">
+            <TabItem Header="{Binding Source={x:Static resx:Resources.ShootersAndTargets}}">
                 <Grid Grid.Row="0" Grid.Column="0">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="auto"/>
