--- a/ProjektSemestrIV/Views/ShowShooterView.xaml
+++ b/ProjektSemestrIV/Views/ShowShooterView.xaml
@@ -13,39 +13,39 @@
         
         <StackPanel Orientation="Horizontal">
             <Label Content="{Binding Source={x:Static resx:Resources.ShooterName}}"/>
-            <Label Content="{Binding Name}"/>
+            <Label Content="{Binding Name}" FontStyle="Italic"/>
         </StackPanel>
         <StackPanel Orientation="Horizontal">
             <Label Content="{Binding Source={x:Static resx:Resources.ShooterSurname}}"/>
-            <Label Content="{Binding Surname}"/>
+            <Label Content="{Binding Surname}" FontStyle="Italic"/>
         </StackPanel>
         <StackPanel Orientation="Horizontal">
             <Label Content="{Binding Source={x:Static resx:Resources.SumOfPoints}}"/>
-            <Label Content="{Binding SumOfPoints}"/>
+            <Label Content="{Binding SumOfPoints}" FontStyle="Italic"/>
         </StackPanel>
         <StackPanel Orientation="Horizontal">
             <Label Content="{Binding Source={x:Static resx:Resources.SumOfTimes}}"/>
-            <Label Content="{Binding SumOfTimes}"/>
+            <Label Content="{Binding SumOfTimes}" FontStyle="Italic"/>
         </StackPanel>
         <StackPanel Orientation="Horizontal">
             <Label Content="{Binding Source={x:Static resx:Resources.GeneralAccuracy}}"/>
-            <Label Content="{Binding GeneralAccuracy}"/>
+            <Label Content="{Binding GeneralAccuracy}" FontStyle="Italic"/>
         </StackPanel>
         <StackPanel Orientation="Horizontal">
             <Label Content="{Binding Source={x:Static resx:Resources.AlphaAccuracy}}"/>
-            <Label Content="{Binding AlphaAccuracy}"/>
+            <Label Content="{Binding AlphaAccuracy}" FontStyle="Italic"/>
         </StackPanel>
         <StackPanel Orientation="Horizontal">
             <Label Content="{Binding Source={x:Static resx:Resources.CharlieAccuracy}}"/>
-            <Label Content="{Binding CharlieAccuracy}"/>
+            <Label Content="{Binding CharlieAccuracy}" FontStyle="Italic"/>
         </StackPanel>
         <StackPanel Orientation="Horizontal">
             <Label Content="{Binding Source={x:Static resx:Resources.DeltaAccuracy}}"/>
-            <Label Content="{Binding DeltaAccuracy}"/>
+            <Label Content="{Binding DeltaAccuracy}" FontStyle="Italic"/>
         </StackPanel>
         <StackPanel Orientation="Horizontal">
             <Label Content="{Binding Source={x:Static resx:Resources.AveragePosition}}"/>
-            <Label Content="{Binding AveragePosition}"/>
+            <Label Content="{Binding AveragePosition}" FontStyle="Italic"/>
         </StackPanel>
         <DataGrid x:Name="DataGridCompetitions" ItemsSource="{Binding Competitions}"
                   AlternatingRowBackground="Lavender" GridLinesVisibility="None" IsReadOnly="True" AutoGenerateColumns="False"
